# htmlToPDF

./: CMakeLists.txt  re_cmake64.bat
cmake/: generate_templates.cmake
include/: html_report_builder.h  invoice_builder.h  pdf_generator.h  pdfevent.h  purchase_summary_builder.h  sales_summary_builder.h  template_engine.h
lib/: README.md
scripts/: install_wkhtmltox.sh
server/: package.json  server.js
src/: html_report_builder.cpp  invoice_builder.cpp  main.cpp  pdf_generator.cpp  purchase_summary_builder.cpp  sales_summary_builder.cpp  template_engine.cpp
templates/: README.md  billing_statement.html  invoice.html  letter.html  poison_order.html  purchase_order.html  purchase_summary.html  report.html  sales_summary.html  tabular_report.html
